Fixed production start script; Removed Ant-Design;

--- a/package.json
+++ b/package.json
@@ -18,11 +18,7 @@
     "copy:.nuxt": "copyfiles -a \".nuxt/**/*\" dist",
     "copy:config": "copyfiles nuxt.config.js package.json package-lock.json dist",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "nest start",
-    "start:dev": "nest start --watch",
-    "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "start": "cross-env mode=production node dist/server/main.js",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
@@ -31,7 +27,6 @@
   },
   "dependencies": {
     "nuxt": "^2.0.0",
-    "ant-design-vue": "^1.1.10",
     "@nuxtjs/axios": "^5.3.6",
     "@nuxtjs/pwa": "^3.0.0-0",
     "@nestjs/common": "^7.0.0",
